# VSSS-Software

./: .gitignore  Cargo.toml  PIPELINE_MIGRACION.md  PROYECTO_RUSTENGINE.md  README.md  build.rs
src/: control_loop.rs  field.rs  lib.rs  main.rs  skill_log.rs  vision.rs
src/GUI/: field.rs  mod.rs  vision_status.rs
src/coach/: coach_trait.rs  mod.rs  observation.rs  rl_coach.rs  robot_target.rs  rule_based_coach.rs  skill_choice.rs
src/motion/: benchmark.rs  commands.rs  environment.rs  mod.rs  path_planner.rs  pid.rs  uvf.rs
src/plays/: coach_play.rs  mod.rs  standard_play.rs
src/protos/: fira_command.proto  fira_command.rs  fira_common.proto  fira_common.rs  fira_packet.proto  fira_packet.rs  fira_replacement.proto  fira_replacement.rs  grSim_Commands.rs  grSim_Packet.rs  grSim_Replacement.rs  grSim_Robotstatus.rs  mod.rs  ssl_gc_api.rs  ssl_gc_change.rs  ssl_gc_common.rs  ssl_gc_engine.rs  ssl_gc_engine_config.rs  ssl_gc_game_event.rs  ssl_gc_geometry.rs  ssl_gc_rcon.rs  ssl_gc_rcon_autoref.rs  ssl_gc_rcon_remotecontrol.rs  ssl_gc_rcon_team.rs  ssl_gc_referee_message.rs  ssl_gc_state.rs  ssl_simulation_config.rs  ssl_simulation_control.rs  ssl_simulation_error.rs  ssl_simulation_robot_control.rs  ssl_simulation_robot_feedback.rs  ssl_simulation_synchronous.rs  ssl_vision_detection.rs  ssl_vision_geometry.rs  ssl_vision_wrapper.rs
src/radio/: base_station.rs  commands.rs  firasim.rs  grsim.rs  mod.rs  transport.rs
src/skills/: catalog.rs  config.rs  mod.rs
src/tactics/: mod.rs
src/tracker/: ekf.rs  mod.rs
src/tui/: mod.rs  ui.rs
src/world/: ball_state.rs  mod.rs  robot_state.rs
tools/: plot_run.py
training/: .gitignore  README.md  callbacks.py  eval.py  eval_match.py  export_onnx.py  pyproject.toml  requirements-rsoccer.txt  requirements.txt  run_curriculum.py  train.py  train_phase1.py  train_rsoccer.py  viewer.py
training/aws/: AWS_SETUP.md  requirements-aws.txt  train_curriculum.sh
training/models/: policy.onnx  policy_gk.onnx
training/sysid/: .gitignore  README.md  firasim_sysid.py  fit_sysid.py  gen_protos.py  sim_calibration.json
training/vsss_rl/: __init__.py  engine_constants.py  env_phase1.py  observation.py  policy.py  render.py  reward.py  rsoccer_env.py  rule_based.py  skills.py  soccer_env.py
